# dychess

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yaml
benches/: make_move.rs  perft.rs
src/: bishop.rs  bitboard.rs  board.rs  build.rs  castle_rights.rs  chess_move.rs  color.rs  king.rs  knight.rs  lib.rs  pawn.rs  pawn_moves.rs  piece.rs  queen.rs  rays.rs  rook.rs  square.rs
src/board/: epd.rs  fen.rs  mod.rs  movegen.rs  util.rs  zobrist.rs
src/generator/: bb_gen.rs  king_gen.rs  knight_gen.rs  magic_gen.rs  mod.rs  pawn_gen.rs  pawn_moves_gen.rs  rays_gen.rs
tests/: capture_cr_change.rs  perft.rs  polyglot.rs
