[package]
name = "dychess"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]

[build-dependencies]
fastrand = "2.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[[bench]]
name = "perft"
harness = false
