[package]
name = "dychess"
version = "0.1.0"
edition = "2021"
description = "A chess library for chess engines."
license = "BSD-2-Clause-Patent"
repository = "https://github.com/funnsam/dychess"
keywords = ["chess"]
categories = ["no-std::no-alloc"]
build = "src/build.rs"

[dependencies]

[build-dependencies]
fastrand = "2.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
debug = true

[[bench]]
name = "perft"
harness = false
